<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/main_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_Activities.account.AccountActivity">

    <LinearLayout
        android:id="@+id/header_Account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_Account"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:src="@drawable/baseline_arrow_back_ios_new_24"/>

        <TextView
            android:text="@string/account"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/icon_notificationAccount"
            android:layout_marginStart="250dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:src="@drawable/baseline_notifications_active_24"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_Account"
        app:layout_constraintTop_toBottomOf="@+id/header_Account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/grey_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_User"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/background_image"
            app:tint="@color/white">
        </ImageView>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_UserAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_info_account"
                android:textColor="@color/grey"
                android:textSize="14sp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/change_Account"
            android:src="@drawable/change_account_24"
            android:background="@color/grey_dark"
            android:layout_marginTop="13dp"
            android:layout_marginStart="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manage_Account"
        app:layout_constraintTop_toBottomOf="@+id/detail_Account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/baseline_payment_24"
                android:background="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/manage_payment"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:src="@drawable/baseline_arrow_down_24"
                android:background="@color/main_color"
                android:layout_marginStart="196dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/baseline_list_alt_24"
                android:background="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/my_list"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:src="@drawable/baseline_arrow_down_24"
                android:background="@color/main_color"
                android:layout_marginStart="202dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/baseline_settings_24"
                android:background="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/setting_app"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:src="@drawable/baseline_arrow_down_24"
                android:background="@color/main_color"
                android:layout_marginStart="207dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:src="@drawable/baseline_contact_support_24"
                android:background="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/support_service"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:src="@drawable/baseline_arrow_down_24"
                android:background="@color/main_color"
                android:layout_marginStart="228dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_Btn"
        android:layout_marginTop="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/orange_button_background"
        android:text="@string/Log_out"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>
    <ProgressBar
        android:id="@+id/progressBarLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />



</androidx.constraintlayout.widget.ConstraintLayout>